[metadata]
name = trepudox_py_utils
version = 0.0.2
author = trepudox
author_email = teoaa2@gmail.com
description = This lib is intended to have some utilities that I use in my projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trepudox/trepudox_py_utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Topic :: Software Development :: Libraries :: Python Modules
[options]
packages = find:
python_requires = >=3.7
include_package_data = True